--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -61,6 +61,11 @@
  * @import "utilities/skew-transforms";
  */
 
+a
+  @apply text-blue-500
+  &:hover
+    @apply text-gray-500
+
 %tab-shared
   @apply text-center block rounded py-2 px-4 font-semibold
 
